# antipredator-plasiticity

./: .gitignore  .lintr  README.md  cleaning.py  generative_model.py  main.py  model.stan  model_summary.py  params.py  pyproject.toml  run.py  standardise.py  statistical_model.py  summaries.py  test.py  validate.py
data/: behaviours.csv  benthic-cover.csv  individuals.csv  observations.csv  plots.csv  predators.csv  rugosity.csv  samples.csv  sites.csv  sizes.csv  traits.csv
functions/: analysis.py  analysis_tables.R  data.py  model.py  plot.py  species_table.R  summaries.R  summary_tables.R  validate.py
models/abundance-plot/: counterfactuals.R  model.R  model.stan  summary.R
models/behaviour-bites/: counterfactuals.R  model.R  summary.R
models/behaviour-prob/: counterfactuals.R  model.R  model_vigilance.stan  summary.R
models/behaviour-time/: counterfactuals.R  model.R  model.stan  model_foraging.stan  model_vigilance.stan  summary.R
