[project]
name = "antipredator_behaviour_plasticity"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.12.10",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "python-lsp-server>=1.12.2",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]

[tool.marimo.save]
autosave_delay = 1000
autosave = true
format_on_save = true

[tool.marimo.experimental]
multi_column = true
chat_sidebar = true
# Very experimental!
lsp = true

[tool.marimo.display]
dataframes = "rich"
default_width = "medium"

[tool.marimo.runtime]
watcher_on_save = "autorun"
output_max_bytes = 10_000_000
std_stream_max_bytes = 2_000_000
