[project]
name = "antipredator_behaviour_plasticity"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.21.0",
    "cmdstanpy>=1.2.5",
    "dataframe-image>=0.2.7",
    "df2img>=0.2.21",
    "ipython>=9.3.0",
    "marimo>=0.13.6",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "ptipython>=1.0.1",
    "ptpython>=3.0.30",
    "python-lsp-server>=1.12.2",
    "rpy2>=3.6.4",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "selenium>=4.33.0",
]

[tool.marimo.save]
autosave_delay = 1000
autosave = true
format_on_save = true

[tool.marimo.experimental]
multi_column = true
chat_sidebar = true
# Very experimental!
lsp = true

[tool.marimo.display]
dataframes = "rich"
default_width = "medium"

[tool.marimo.runtime]
watcher_on_save = "autorun"
output_max_bytes = 10_000_000
std_stream_max_bytes = 2_000_000
